Date widget styling to ensure it appears completely within the search filters display area instead of moving out of the viewport on the right side.

--- a/www/app/styles/datepicker.css
+++ b/www/app/styles/datepicker.css
@@ -39,3 +39,17 @@
   background: #eee;
   pointer-events: none;
 }
+
+
+.os-search .os-dp-align-left .dropdown-menu {
+  left: -152px!important;
+}
+
+.os-search .os-dp-align-left .dropdown-menu:before {
+  left: 151px;
+}
+
+.os-search .os-dp-align-left .dropdown-menu:after {
+  left: 152px;
+}
+
